stu balance, transaction, modify info

--- a/web/stu/modify_password.html
+++ b/web/stu/modify_password.html
@@ -38,7 +38,7 @@
     </body>
     <script>
         window.onload = function() {
-            setTchMenu();
+            setStuMenu();
             setNavigation("修改密码");
         }
 
@@ -51,7 +51,7 @@
                 $.ajax({
                     type:"GET",
                     contentType:"application/x-www-form-urlencoded",
-                    url:"http://localhost:8089/tch/request",
+                    url:"http://localhost:8089/stu/request",
                     xhrFields:{withCredentials:true},
                     success:function(data){
                         if (data.data.errCode == 20003) {
@@ -89,7 +89,7 @@
                 $.ajax({
                     type:"POST",
                     contentType:"application/x-www-form-urlencoded",
-                    url:"http://localhost:8089/tch/modifyPassword",
+                    url:"http://localhost:8089/stu/modifyPassword",
                     data:{
                         previousPassword: previous_password,
                         newPassword: new_password
