--- a/web/stu/platform.html
+++ b/web/stu/platform.html
@@ -99,7 +99,7 @@
                         reloadDom();
                     },
                     error:function(data){
-                        alert("获取用户登录信息失败，因为 "+data.responseText);
+                        alert("获取课程信息失败，因为 "+data.responseText);
                     }
                 });
                 return false;
