--- a/web/stu/course.html
+++ b/web/stu/course.html
@@ -124,6 +124,29 @@
                 });
                 return false;
             });
+            $("#sign_up").on("click", function() {
+                $.ajax({
+                    type:"POST",
+                    contentType:"application/x-www-form-urlencoded",
+                    url:"http://localhost:8089/course/create",
+                    data:{
+                        "courseId":g_courseVO.id
+                    },
+                    xhrFields:{withCredentials:true},
+                    success:function(data) {
+                        if (data.status == "success") {
+                            alert("报名课程成功");
+                            window.location.href = "platform.html";
+                        } else {
+                            alert("报名课程失败，因为"+data.data.errorMessage);
+                        }
+                    },
+                    error:function(data) {
+                        alert("报名课程失败，因为" + data.responseText);
+                    }
+                });
+                return false;
+            });
         });
     </script>
 </html>
