--- a/web/stu/modify_info.html
+++ b/web/stu/modify_info.html
@@ -10,36 +10,40 @@
         <script src="../js/jquery-1.11.0.min.js" type="text/javascript"></script>
         <script src="../js/menu.js" type="text/javascript"></script>
         <script src="../js/navigation.js" type="text/javascript"></script>
-        <script src="../js/gender.js" type="text/javascript"></script>
+        <script src="../js/format.js" type="text/javascript"></script>
     </head>
     <body class="platform">
         <div class="menu" id="menu"></div>
         <div class="navigation" id="navigation"></div>
         <div class="mdiv">
-            <h2>修改密码</h2>
+            <h2>修改个人信息</h2>
             <div class="inputs">
                 <div>
-                    旧密码<br/>
-                    <input class="input" type="password" name="previous_password" id="previous_password">
+                    用户名<br/>
+                    <input class="input" type="text" name="name" id="name">
                 </div>
                 <div>
-                    新密码<br/>
-                    <input class="input" type="password" name="new_password" id="new_password">
+                    性别<br/>
+                    <select id="gender">
+                        <option>男</option>
+                        <option>女</option>
+                        <option>保密</option>
+                    </select>
                 </div>
                 <div>
-                    确认新密码<br/>
-                    <input class="input" type="password" name="new_password_confirm" id="new_password_confirm">
+                    手机号<br/>
+                    <input class="input" type="text" name="telephone" id="telephone">
                 </div>
             </div>
-            <button class="button" id="modify_password" type="submit">确认</button>
+            <button class="button" id="modify_info" type="submit">确认</button>
             <button class="button" id="back" type="submit">返回</button>
             <br/>
         </div>
     </body>
     <script>
         window.onload = function() {
-            setTchMenu();
-            setNavigation("修改密码");
+            setStuMenu();
+            setNavigation("修改个人信息");
         }
 
         document.getElementById("back").onclick = function() {
@@ -51,7 +55,7 @@
                 $.ajax({
                     type:"GET",
                     contentType:"application/x-www-form-urlencoded",
-                    url:"http://localhost:8089/tch/request",
+                    url:"http://localhost:8089/stu/request",
                     xhrFields:{withCredentials:true},
                     success:function(data){
                         if (data.data.errCode == 20003) {
@@ -59,6 +63,9 @@
                             window.location.href="../login.html";
                         }
                         $("#me").text("您好，"+data.data.name);
+                        $("#name").val(data.data.name);
+                        $("#gender").val(getStrFromGender(data.data.gender));
+                        $("#telephone").val(data.data.telephone);
                     },
                     error:function(data){
                         alert("获取用户登录信息失败，因为 "+data.responseText);
@@ -66,45 +73,42 @@
                 });
                 return false;
             });
-            $("#modify_password").on("click", function() {
-                var previous_password = $("#previous_password").val();
-                var new_password = $("#new_password").val();
-                var new_password_confirm = $("#new_password_confirm").val();
-                if (previous_password == null || previous_password == "") {
-                    alert("旧密码不能为空");
+            $("#modify_info").on("click", function() {
+                var name = $("#name").val();
+                var gender = $("#gender").val();
+                var telephone = $("#telephone").val();
+                if (name == null || name == "") {
+                    alert("用户名不能为空");
                     return;
                 }
-                if (new_password == null || new_password == "") {
-                    alert("新密码不能为空");
+                if (telephone == null || telephone == "") {
+                    alert("手机号不能为空");
                     return;
                 }
-                if (new_password == previous_password) {
-                    alert("新密码不能和旧密码相同");
-                    return;
-                }
-                if (new_password != new_password_confirm) {
-                    alert("新密码不相等");
+                if (telephone.length != 11) {
+                    alert("手机号长度不合法");
                     return;
                 }
                 $.ajax({
                     type:"POST",
                     contentType:"application/x-www-form-urlencoded",
-                    url:"http://localhost:8089/tch/modifyPassword",
+                    url:"http://localhost:8089/stu/modifyInfo",
                     data:{
-                        previousPassword: previous_password,
-                        newPassword: new_password
+                        name: name,
+                        gender: getGenderFromStr(gender),
+                        telephone: telephone,
                     },
                     xhrFields:{withCredentials:true},
                     success:function(data) {
                         if (data.status == "success") {
-                            alert("修改密码成功");
+                            alert("修改个人信息成功");
                             window.location.href = "my_info.html";
                         } else {
-                            alert("修改密码失败，因为"+data.data.errorMessage);
+                            alert("修改个人信息失败，因为"+data.data.errorMessage);
                         }
                     },
                     error:function(data) {
-                        alert("修改密码失败，因为" + data.responseText);
+                        alert("修改个人信息失败，因为" + data.responseText);
                     }
                 })
                 return false;
