--- a/web/stu/recharge.html
+++ b/web/stu/recharge.html
@@ -10,40 +10,26 @@
         <script src="../js/jquery-1.11.0.min.js" type="text/javascript"></script>
         <script src="../js/menu.js" type="text/javascript"></script>
         <script src="../js/navigation.js" type="text/javascript"></script>
-        <script src="../js/gender.js" type="text/javascript"></script>
+        <script src="../js/format.js" type="text/javascript"></script>
     </head>
     <body class="platform">
         <div class="menu" id="menu"></div>
         <div class="navigation" id="navigation"></div>
         <div class="mdiv">
-            <h2>修改密码</h2>
+            <h2>充值</h2>
             <div class="inputs">
                 <div>
-                    旧密码<br/>
-                    <input class="input" type="password" name="previous_password" id="previous_password">
-                </div>
-                <div>
-                    新密码<br/>
-                    <input class="input" type="password" name="new_password" id="new_password">
-                </div>
-                <div>
-                    确认新密码<br/>
-                    <input class="input" type="password" name="new_password_confirm" id="new_password_confirm">
+                    充值金额<br/>
+                    <input class="input" type="text" name="title" id="amount">
                 </div>
             </div>
-            <button class="button" id="modify_password" type="submit">确认</button>
-            <button class="button" id="back" type="submit">返回</button>
-            <br/>
+            <button id="recharge">确认</button>
         </div>
     </body>
     <script>
         window.onload = function() {
-            setTchMenu();
-            setNavigation("修改密码");
-        }
-
-        document.getElementById("back").onclick = function() {
-            window.location.href = "my_info.html";
+            setStuMenu();
+            setNavigation("充值");
         }
 
         jQuery(document).ready(function() {
@@ -51,7 +37,7 @@
                 $.ajax({
                     type:"GET",
                     contentType:"application/x-www-form-urlencoded",
-                    url:"http://localhost:8089/tch/request",
+                    url:"http://localhost:8089/stu/request",
                     xhrFields:{withCredentials:true},
                     success:function(data){
                         if (data.data.errCode == 20003) {
@@ -64,47 +50,53 @@
                         alert("获取用户登录信息失败，因为 "+data.responseText);
                     }
                 });
+                $.ajax({
+                    type:"GET",
+                    contentType:"application/x-www-form-urlencoded",
+                    url:"http://localhost:8089/stuWallet/getWallet",
+                    xhrFields:{withCredentials:true},
+                    success:function(data){
+                        if (data.status=="success") {
+                            $("#balance").text("当前余额：" + (balance = data.data.balance));
+                        }else{
+                            alert("获取余额失败，因为 "+data.responseText);
+                        }
+                    },
+                    error:function(data){
+                        alert("获取用户登录信息失败，因为 "+data.responseText);
+                    }
+                });
                 return false;
             });
-            $("#modify_password").on("click", function() {
-                var previous_password = $("#previous_password").val();
-                var new_password = $("#new_password").val();
-                var new_password_confirm = $("#new_password_confirm").val();
-                if (previous_password == null || previous_password == "") {
-                    alert("旧密码不能为空");
+            $("#recharge").on("click", function() {
+                var amount = $("#amount").val();
+                if (amount == null || amount == "") {
+                    alert("充值金额不能为空");
                     return;
                 }
-                if (new_password == null || new_password == "") {
-                    alert("新密码不能为空");
-                    return;
-                }
-                if (new_password == previous_password) {
-                    alert("新密码不能和旧密码相同");
-                    return;
-                }
-                if (new_password != new_password_confirm) {
-                    alert("新密码不相等");
+                if (amount <= 0) {
+                    alert("充值金额不能小于0");
                     return;
                 }
                 $.ajax({
                     type:"POST",
                     contentType:"application/x-www-form-urlencoded",
-                    url:"http://localhost:8089/tch/modifyPassword",
+                    url:"http://localhost:8089/stuWallet/recharge",
                     data:{
-                        previousPassword: previous_password,
-                        newPassword: new_password
+                        "amount":amount,
                     },
                     xhrFields:{withCredentials:true},
                     success:function(data) {
                         if (data.status == "success") {
-                            alert("修改密码成功");
-                            window.location.href = "my_info.html";
+                            alert("充值成功");
+                            document.getElementById("amount").value = "";
+                            document.location.reload();
                         } else {
-                            alert("修改密码失败，因为"+data.data.errorMessage);
+                            alert("充值失败，因为"+data.data.errorMessage);
                         }
                     },
                     error:function(data) {
-                        alert("修改密码失败，因为" + data.responseText);
+                        alert("充值失败，因为" + data.responseText);
                     }
                 })
                 return false;
