--- a/web/tch/my_course.html
+++ b/web/tch/my_course.html
@@ -73,7 +73,7 @@
                 });
                 $.ajax({
                     type:"GET",
-                    url:"http://localhost:8089/course/list",
+                    url:"http://localhost:8089/course/listTchCourse",
                     xhrFields:{withCredentials:true},
                     success:function(data){
                         if (data.status=="success") {
